--- a/hoja_estilos.css
+++ b/hoja_estilos.css
@@ -13,7 +13,7 @@ body {
 	width: 100%;
 	/*text-align: center;*/
 	background: #0b0b0b; 
-	background-image: url("images/fondo-grade-alfa2.png");
+	background-image: url("images/fondo-grade-alfa2.webp");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	color: #ffffff;
